--- a/action.yaml
+++ b/action.yaml
@@ -15,6 +15,10 @@ inputs:
 runs:
   using: composite
   steps:
+  - name: "Install the gh cli tool if not installed"
+    shell: bash
+    run: ${{ github.action_path }}/deps.sh
+
   - name: Cancel
     shell: bash
     run: ${GITHUB_ACTION_PATH}/cancel.sh
